--- a/CampusTourGuide/app/src/main/AndroidManifest.xml
+++ b/CampusTourGuide/app/src/main/AndroidManifest.xml
@@ -31,6 +31,8 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
+        <service android:name= ".GeofenceTransitionsIntentService" />
+
         <activity
             android:name=".MapsActivity"
             android:label="@string/title_activity_maps">
