Things starting to work!!
- Problem solved with IOIO_OTG service. Problem was that
createIOIOLooper() was not being called therefore the service worked,
just couldnt see the led's flashing!!!

- Managed to get activity running at click of button

--- a/CampusTourGuide/app/src/main/AndroidManifest.xml
+++ b/CampusTourGuide/app/src/main/AndroidManifest.xml
@@ -32,6 +32,7 @@
             android:value="@string/google_maps_key" />
 
         <service android:name= ".GeofenceTransitionsIntentService" />
+        <service android:name= ".IOIO_OTG" />
 
         <activity
             android:name=".MapsActivity"
