IOIO Thread Officially working + Created new OrientationListener Service
- led now flashing in seperate IOIO thread
- coded OrientationListener in seperate service for Rob to use

--- a/CampusTourGuide/app/src/main/AndroidManifest.xml
+++ b/CampusTourGuide/app/src/main/AndroidManifest.xml
@@ -35,6 +35,10 @@
 
         <service android:name= ".IOIO_OTG"/>
 
+        <service android:name= ".MyOrientationListener"/>
+
+
+
         <activity
             android:name=".MapsActivity"
             android:label="@string/title_activity_maps">
